talos/talos-kubevirt/hco/secondary-dns-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: secondary-dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
  name: secondary-dns-tcp
  namespace: kubevirt-hyperconverged
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.55
  selector:
    k8s-app: secondary-dns
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 5353
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: secondary-dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
  name: secondary-dns-udp
  namespace: kubevirt-hyperconverged
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.55
  selector:
    k8s-app: secondary-dns
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 5353
