talos/talos-kubevirt/hco/secondary-dns.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: secondary-dns
  name: secondary-dns
  namespace: kubevirt-hyperconverged
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: secondary-dns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: status-monitor
        openshift.io/required-scc: restricted-v2
      labels:
        k8s-app: secondary-dns
    spec:
      containers:
      - args:
        - -conf
        - /etc/coredns/Corefile
        image: registry.k8s.io/coredns/coredns@sha256:a0ead06651cf580044aeb0a0feba63591858fb2e43ade8c9dea45a6a89ae7e5e
        imagePullPolicy: IfNotPresent
        name: secondary-dns
        ports:
        - containerPort: 5353
          name: dns
          protocol: UDP
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/coredns
          name: config-volume
          readOnly: true
        - mountPath: /zones
          name: secdns-zones
          readOnly: true
      - env:
        - name: DOMAIN
          valueFrom:
            configMapKeyRef:
              key: DOMAIN
              name: secondary-dns
        - name: NAME_SERVER_IP
          valueFrom:
            configMapKeyRef:
              key: NAME_SERVER_IP
              name: secondary-dns
        image: ghcr.io/kubevirt/kubesecondarydns@sha256:8273cdbc438e06864eaa8e47947bea18fa5118a97cdaddc41b5dfa6e13474c79
        imagePullPolicy: IfNotPresent
        name: status-monitor
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /zones
          name: secdns-zones
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      priorityClassName: system-cluster-critical
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      serviceAccount: secondary
      serviceAccountName: secondary
      terminationGracePeriodSeconds: 1
      tolerations:
      - effect: NoSchedule
        operator: Exists
      volumes:
      - configMap:
          defaultMode: 420
          items:
          - key: Corefile
            path: Corefile
          name: secondary-dns
        name: config-volume
      - emptyDir: {}
        name: secdns-zones
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: secondary-dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
  name: secondary-dns-tcp
  namespace: kubevirt-hyperconverged
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.55
  selector:
    k8s-app: secondary-dns
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 5353
---
apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: secondary-dns
  annotations:
    metallb.universe.tf/allow-shared-ip: "true"
  name: secondary-dns-udp
  namespace: kubevirt-hyperconverged
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.0.55
  selector:
    k8s-app: secondary-dns
  ports:
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 5353
